--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "star-wars",
-  "homepage": "http://LiliyaGavrishchishena.github.io/star-wars/",
+  "homepage": "https://LiliyaGavrishchishena.github.io/star-wars/",
   "repository": "https://github.com/LiliyaGavrishchishena/star-wars.git",
   "author": "liliya.gavrishchishena@gmail.com",
-  "description": "React",
+  "description": "React, React Hooks",
+  "main": "index.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
